added translation for Civil registry tables and actions

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -21,14 +21,12 @@
   "marriage_registration_distribution": "Marriage Registration Distribution",
   "monthly_breakdown_marriages": "Monthly breakdown of marriages for the past 6 months",
   "loading_statistics": "Loading statistics...",
-  
-    "greeting_morning": "Good morning,",
-    "greeting_afternoon": "Good afternoon,",
-    "greeting_evening": "Good evening,",
-    "dashboard_root": "Dashboard",
-    "time_format": "{{time}}",
-    "date_format": "{{date}}",
-
+  "greeting_morning": "Good morning,",
+  "greeting_afternoon": "Good afternoon,",
+  "greeting_evening": "Good evening,",
+  "dashboard_root": "Dashboard",
+  "time_format": "{{time}}",
+  "date_format": "{{date}}",
   "gender_distribution": "Gender Distribution",
   "birth_registrations_by_gender": "Birth registrations by gender",
   "male": "Male",
@@ -38,14 +36,107 @@
   "conclusion_more_female": "More female births than male from 2019-2023.",
   "conclusion_equal": "Equal number of male and female births from 2019-2023.",
   "last_6_months": "Showing total registrations for the last 6 months",
-
   "recent_registrations": "Recent Registrations",
   "last_10_days": "Last 10 days",
   "name": "Name",
   "type": "Type",
   "registration_date": "Registration Date",
   "total": "Total",
-  "updated": "Updated"
-  
-
+  "updated": "Updated",
+  "platform": "Platform",
+  "dashboard": "Dashboard",
+  "settings": "Settings",
+  "profile": "Profile",
+  "logout": "Logout",
+  "manage-queue": "Manage Queue",
+  "users": "Manage Users",
+  "admin": "Admin",
+  "staffs": "Staffs",
+  "regular-users": "Regular Users",
+  "civil-registry": "Civil Registry",
+  "certified-true-copies": "Manage CTC",
+  "reports": "Report Generation",
+  "feedback": "Feedback",
+  "send-feedback": "Send Feedback",
+  "panel": "Panel",
+  "log-out": "Log out",
+  "logging-out": "Logging out",
+  "confirm-logout": "Confirm Logout",
+  "are-you-sure": "Are you sure you want to log out?",
+  "cancel": "Cancel",
+  "Basic Search": "Basic Search",
+  "Name Search": "Name Search",
+  "Search forms...": "Search forms...",
+  "Page number...": "Page number...",
+  "Book number...": "Book number...",
+  "First name": "First name",
+  "Middle name": "Middle name",
+  "Last name": "Last name",
+  "Form Type": "Form Type",
+  "Status": "Status",
+  "Year": "Year",
+  "Prepared By": "Prepared By",
+  "Verified By": "Verified By",
+  "Pick a date range": "Pick a date range",
+  "Export": "Export",
+  "Reset": "Reset",
+  "Pending": "Pending",
+  "Verified": "Verified",
+  "No data available to export": "No data available to export",
+  "Data exported successfully": "Data exported successfully",
+  "Failed to export data": "Failed to export data",
+  "View": "View",
+  "Toggle columns": "Toggle columns",
+  "formType": "Form Type",
+  "registryDetails": "Registry Details",
+  "registry": "Registry",
+  "page": "Page",
+  "book": "Book",
+  "details": "Details",
+  "sex": "Sex",
+  "dateOfBirth": "Date of Birth",
+  "dateOfDeath": "Date of Death",
+  "husband": "Husband",
+  "wife": "Wife",
+  "dateOfMarriage": "Date of Marriage",
+  "location": "Location",
+  "preparedBy": "Prepared By",
+  "verifiedBy": "Verified By",
+  "received": "Received",
+  "registeredBy": "Registered By",
+  "year": "Year",
+  "status": "Status",
+  "createdAt": "Created At",
+  "pending": "Pending",
+  "approved": "Approved",
+  "rejected": "Rejected",
+  "actions": "Actions",
+  "viewDetails": "View Details",
+  "importDocument": "Import Document",
+  "exportDocument": "Export Document",
+  "issueCertificate": "Issue Certificate",
+  "delete": "Delete",
+  "deleting": "Deleting...",
+  "death": "Death",
+  "marriage": "Marriage",
+  "birth": "Birth",
+  "expired": "Expired",
+  "verified": "Verified",
+  "formDetails": {
+    "title": "Form Details",
+    "description": "View the details of the selected form",
+    "formType": "Form Type",
+    "registryNo": "Registry Number",
+    "status": "Status"
+  },
+  "datatable": {
+        "selected_rows": "{{selected}} of {{total}} row(s) selected.",
+        "no_rows_selected": "No rows selected.",
+        "rows_per_page": "Rows per page",
+        "page_info": "Page {{current}} of {{total}}",
+        "go_to_first_page": "Go to first page",
+        "go_to_previous_page": "Go to previous page",
+        "go_to_next_page": "Go to next page",
+        "go_to_last_page": "Go to last page"
+    }
 }
