--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -152,10 +152,19 @@
   "Anonymous": "Hindi Kilala",
   "submittedBy": "Ipinasa ni",
   "updatedAt": "Nai-update",
-  
+
   "No results found": "Walang nahanap na resulta",
   "Try adjusting your filters or search terms": "Subukang i-adjust ang iyong mga filter o paghahanap",
-  "No requests have been added yet": "Wala pang naidagdag na mga kahilingan"
+  "No requests have been added yet": "Wala pang naidagdag na mga kahilingan",
+
+  "Create New Form": "Lumikha ng Bagong Form",
+  "Select Form Type": "Piliin ang Uri ng Form",
+  "Certificate of Live Birth": "Sertipiko ng Buhay na Kapanganakan",
+  "Certificate of Death": "Sertipiko ng Kamatayan",
+  "Certificate of Marriage": "Sertipiko ng Kasal",
+  "(Municipal Form No. 102)": "(Pormularyo ng Munisipyo Bilang 102)",
+  "(Municipal Form No. 103)": "(Pormularyo ng Munisipyo Bilang 103)",
+  "(Municipal Form No. 97)": "(Pormularyo ng Munisipyo Bilang 97)"
 
   
   
