--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -69,7 +69,7 @@
   "Search forms...": "Maghanap ng mga form...",
   "Page number...": "Numero ng pahina...",
   "Book number...": "Numero ng aklat...",
-  "First name": "Pangalan",
+  "First name": "Unang Pangalan",
   "Middle name": "Gitnang pangalan",
   "Last name": "Apelyido",
   "Form Type": "Uri ng Form",
@@ -249,5 +249,30 @@
   },
   "loadingForms": "Naglo-load ng mga Form",
   "fetchingForms": "Pakiusap maghintay habang kinukuha namin ang mga form ng civil registry...",
-  "civilRegistry": "Talaan ng mga Pag-aari"
+  "civilRegistry": "Talaan ng mga Pag-aari",
+  "Civil Registry": "Talaan ng mga Pag-aari",
+  "Requests": "Mga Kahilingan",
+  "Profile": "Perpil",
+  "Users": "Mga Gumagamit",
+  "Reports": "Mga Ulat",
+
+  "notifications": "Mga Abiso",
+  "unread": "hindi pa nababasa",
+  "loading": "Naglo-load",
+  "no_notifications": "Walang abiso",
+  "close": "Isara",
+  "just_now": "Katatapos lang",
+  "minutes_ago": "minuto ang nakalipas",
+  "hours_ago": "oras ang nakalipas",
+  "days_ago": "araw ang nakalipas",
+
+  "success_logout": "Matagumpay na nag-logout",
+  "guest_user": "Bisitang Gumagamit",
+  "guest_role": "Bisitante",
+  "no_email": "Walang email",
+  "sign_out": "Mag-logout",
+  "confirm_logout": "Kumpirmahin ang Pag-logout",
+  "confirm_logout_message": "Sigurado ka bang gusto mong mag-logout?",
+  "log_out": "Mag-logout",
+  "logging_out": "Naglo-logout..."
 }
