fix percentage on metrics

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -17,8 +17,8 @@
   },
   "registry_statistics": "Registry Statistics",
   "monthly_registration_trends": "Monthly registration trends for the past 6 months",
-  "trending_up": "Trending up by {percentage}% this month",
-  "trending_down": "Trending down by {percentage}% this month",
+  "trending_up": "Trending up by {{percentage}}% this month",
+  "trending_down": "Trending down by {{percentage}}% this month",
   "showing_registration_data": "Showing registration data for the last 6 months",
   "marriage_distribution": "Marriage Distribution",
   "past_six_months_marriage_statistics": "Past 6 Months Marriage Statistics",
