--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -17,8 +17,8 @@
   },
   "registry_statistics": "Mga Estadistika ng Rehistro",
   "monthly_registration_trends": "Buwanang mga trend ng rehistro sa nakaraang 6 na buwan",
-  "trending_up": "Tumaas ng {percentage}% ngayong buwan",
-  "trending_down": "Bumaba ng {percentage}% ngayong buwan",
+  "trending_up": "Tumaas ng {{percentage}}% ngayong buwan",
+  "trending_down": "Bumaba ng {{percentage}}% ngayong buwan",
   "showing_registration_data": "Ipinapakita ang data ng rehistro para sa huling 6 na buwan",
   "marriage_distribution": "Pamamahagi ng Kasal",
   "past_six_months_marriage_statistics": "Mga Estadistika ng Kasal sa Nakaraang 6 na Buwan",
