--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -59,6 +59,7 @@
   "staffs": "Staffs",
   "regular-users": "Regular Users",
   "civil-registry": "Civil Registry",
+  "roles-and-permissions": "Roles and Permissions",
   "certified-true-copies": "Manage CTC",
   "reports": "Report Generation",
   "feedback": "Feedback",
