--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -59,6 +59,7 @@
   "staffs": "Mga Kawani",
   "regular-users": "Mga Regular na User",
   "civil-registry": "Rehistro ng mga Sibil",
+  "roles-and-permissions": "Mga Tungkulin at Pahintulot",
   "certified-true-copies": "Pamahalaan ang CTC",
   "reports": "Pagbuo ng Ulat",
   "feedback": "Mga Puna",
