DELETE USER | W-Notification

--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -60,8 +60,8 @@
   "regular-users": "Mga Regular na User",
   "civil-registry": "Rehistro ng mga Sibil",
   "roles-and-permissions": "Mga Tungkulin at Pahintulot",
-  "certified-true-copies": "Pamahalaan ang CTC",
-  "reports": "Pagbuo ng Ulat",
+  "certified-true-copies": "Mga Hiling",
+  "reports": "Pag-uulat",
   "feedback": "Mga Puna",
   "send-feedback": "Magpadala ng Feedback",
   "panel": "Panel",
@@ -118,7 +118,8 @@
   "rejected": "Tinanggihan",
   "actions": "Mga Aksyon",
   "viewDetails": "Tingnan ang Mga Detalye",
-  "importDocument": "Mag-import ng Dokumento",
+  "uploadDocument": "Mag-upload ng Dokumento",
+  "scanDocument": "Mag-scan ng Dokumento",
   "exportDocument": "Mag-export ng Dokumento",
   "issueCertificate": "Mag-isyu ng Sertipiko",
   "delete": "Tanggalin",
@@ -233,6 +234,7 @@
     "contact": "Kontak",
     "role": "Tungkulin",
     "permissions": "Mga Pahintulot",
+    "noPermissions": "Walang mga Pahintulot",
     "status": "Status",
     "activity": "Aktibidad",
     "verified": "Naka-verify",
