--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -60,8 +60,8 @@
   "regular-users": "Regular Users",
   "civil-registry": "Civil Registry",
   "roles-and-permissions": "Roles and Permissions",
-  "certified-true-copies": "Manage CTC",
-  "reports": "Report Generation",
+  "certified-true-copies": "Transactions",
+  "reports": "Report",
   "feedback": "Feedback",
   "send-feedback": "Send Feedback",
   "panel": "Panel",
@@ -118,7 +118,8 @@
   "rejected": "Rejected",
   "actions": "Actions",
   "viewDetails": "View Details",
-  "importDocument": "Import Document",
+  "uploadDocument": "Upload Document",
+  "scanDocument": "Scan Document",
   "exportDocument": "Export Document",
   "issueCertificate": "Issue Certificate",
   "delete": "Delete",
@@ -230,6 +231,7 @@
     "contact": "Contact",
     "role": "Role",
     "permissions": "Permissions",
+    "noPermissions": "No Permissions",
     "status": "Status",
     "activity": "Activity",
     "verified": "Verified",
