File Upload | Attachment Management

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -120,6 +120,9 @@
   "viewDetails": "View Details",
   "uploadDocument": "Upload Document",
   "scanDocument": "Scan Document",
+  "viewAttachments": "View Document",
+  "latestAttachment": "Latest Document Attachment",
+  "uploadedOn": "Uploaded on",
   "exportDocument": "Export Document",
   "issueCertificate": "Issue Certificate",
   "delete": "Delete",
