--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -120,6 +120,9 @@
   "viewDetails": "Tingnan ang Mga Detalye",
   "uploadDocument": "Mag-upload ng Dokumento",
   "scanDocument": "Mag-scan ng Dokumento",
+  "viewAttachments": "Tignan ang mga Dokumento",
+  "latestAttachment": "Pinakabagong Attachment",
+  "uploadedOn": "Na-upload noong",
   "exportDocument": "Mag-export ng Dokumento",
   "issueCertificate": "Mag-isyu ng Sertipiko",
   "delete": "Tanggalin",
