--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -119,11 +119,13 @@
   "actions": "Mga Aksyon",
   "viewDetails": "Tingnan ang Mga Detalye",
   "uploadDocument": "Mag-upload ng Dokumento",
+  "importDocument": "Mag-import ng Dokumento",
   "scanDocument": "Mag-scan ng Dokumento",
   "viewAttachments": "Tignan ang mga Dokumento",
   "latestAttachment": "Pinakabagong Attachment",
   "uploadedOn": "Na-upload noong",
   "exportDocument": "Mag-export ng Dokumento",
+  "noDocumentFound": "Walang nahanap na dokumento",
   "issueCertificate": "Mag-isyu ng Sertipiko",
   "delete": "Tanggalin",
   "death": "Kamatayan",
