Middleware and Nav Config | Permissions

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -59,7 +59,7 @@
   "staffs": "Staffs",
   "regular-users": "Regular Users",
   "civil-registry": "Civil Registry",
-  "roles-and-permissions": "Roles and Permissions",
+  "roles": "Roles & Permissions",
   "certified-true-copies": "Transactions",
   "reports": "Report",
   "feedback": "Feedback",
