--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -59,7 +59,7 @@
   "staffs": "Mga Kawani",
   "regular-users": "Mga Regular na User",
   "civil-registry": "Rehistro ng mga Sibil",
-  "roles-and-permissions": "Mga Tungkulin at Pahintulot",
+  "roles": "Mga Tungkulin at Pahintulot",
   "certified-true-copies": "Mga Hiling",
   "reports": "Pag-uulat",
   "feedback": "Mga Puna",
