--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -120,7 +120,7 @@
   "viewDetails": "Tingnan ang Mga Detalye",
   "uploadDocument": "Mag-upload ng Dokumento",
   "importDocument": "Mag-import ng Dokumento",
-  "scanDocument": "Mag-scan ng Dokumento",
+  "scanDocumentUpload": "I-upload ang Dokumento",
   "viewAttachments": "Tignan ang mga Dokumento",
   "latestAttachment": "Pinakabagong Attachment",
   "uploadedOn": "Na-upload noong",
