Edit Form Update in LLanguage

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -15,6 +15,9 @@
     "afternoon": "Good afternoon",
     "evening": "Good evening"
   },
+  "editForm": {
+    "title": "Edit Form"
+  },
   "registry_statistics": "Registry Statistics",
   "monthly_registration_trends": "Monthly registration trends for the past 6 months",
   "trending_up": "Trending up by {{percentage}}% this month",
