fix UI base from the QA dosc

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -75,7 +75,7 @@
   "cancel": "Cancel",
   "Basic Search": "Basic Search",
   "Name Search": "Name Search",
-  "Search forms...": "Search forms...",
+  "Search forms...": "Search forms...(e.g. Name, Registry No.)",
   "Page number...": "Page number...",
   "Book number...": "Book number...",
   "First name": "First name",
