--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -75,7 +75,7 @@
   "cancel": "Kanselahin",
   "Basic Search": "Pangunahing Paghahanap",
   "Name Search": "Paghahanap ng Pangalan",
-  "Search forms...": "Maghanap ng mga form...",
+  "Search forms...": "Maghanap ng mga form...(e.g. Pangalan, Rehistro No.)",
   "Page number...": "Numero ng pahina...",
   "Book number...": "Numero ng aklat...",
   "First name": "Unang Pangalan",
